# HackathonAI_NITC

./: .env.example  .gitignore  README.md  package-lock.json  pyproject.toml
.data/: checkpoints.sqlite-shm  checkpoints.sqlite-wal
docs/: ADDING_CATEGORIES.md  API.md  MEM0.md  ai-processing-flow.md
frontend/: .env.example  .env.production  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  auth.ts  styles.css
ingestion/: README.md
ingestion/clean_data/: Clean_data.xlsx  Final.ipynb  distribute_final_json.py
ingestion/dong_ho_thong_minh/: changeName.py  dictionary.py  embedding.py  processing.py  qdrant.py
ingestion/man_hinh_may_tinh/: changeName.py  dictionary.py  embedding.py  processing.py  qdrant.py
ingestion/may_giat/: changeName.py  dictionary.py  embedding.py  processing.py  qdrant.py
ingestion/may_in/: changeName.py  dictionary.py  embedding.py  processing.py  qdrant.py
ingestion/may_lanh/: changeName.py  dictionary.py  embedding.py  processing.py  qdrant.py
ingestion/may_nuoc_nong/: changeName.py  dictionary.py  embedding.py  processing.py  qdrant.py
ingestion/may_rua_chen/: changeName.py  dictionary.py  embedding.py  processing.py  qdrant.py
ingestion/may_say_quan_ao/: changeName.py  dictionary.py  embedding.py  processing.py  qdrant.py
ingestion/may_tinh_bang/: changeName.py  dictionary.py  embedding.py  processing.py  qdrant.py
ingestion/may_tinh_de_ban/: changeName.py  (+4 more)
tests/: test_api.py  test_guardrails.py  test_llm_fallback.py  test_memory_personalization.py  test_no_match_guidance.py  test_scaffold.py
(+209 files in other folders)
